Add custom exceptions and enhance global exception handling; implement access control in payment creation